# oss_porter

./: Cargo.toml  README.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
core/: Cargo.toml  README.md
core/src/: check.rs  config.rs  extract.rs  lib.rs  remote.rs  state.rs  update.rs  utils.rs
example/: oss_porter.toml  oss_porter_state.toml  oss_porter_state_2.toml
