[package]
name = "oss_porter_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oss-porter" # Define the executable name
path = "src/main.rs"

[dependencies]
oss_porter_core = { path = "../core" }
clap = { version = "^4.4", features = ["derive", "env"] }
dialoguer = { version = "0.11", features = ["completion"] }
log = { workspace = true }
env_logger = "^0.10"