[package]
name = "oss_porter_cli"
version = "0.1.0"
edition = "2021"
publish = ["https://crates.io"]

description = "Command-line interface for OSS Porter: A tool to extract and sync projects from internal to public Git repositories."
authors = ["Norm O <normo.pub@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/normano/oss_porter"
homepage = "https://github.com/normano/oss_porter"
readme = "README.md"
keywords = ["git", "repository", "open-source", "sync", "extract"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[[bin]]
name = "oss-porter"
path = "src/main.rs"

[dependencies]
oss_porter_core = { path = "../core" }
clap = { version = "^4.4", features = ["derive", "env"] }
dialoguer = { version = "0.11", features = ["completion"] }
log = { workspace = true }
env_logger = "^0.10"