[package]
name = "oss_porter_core"
version = "0.1.0"
edition = "2021"

[lib]
# crate-type = ["cdylib", "staticlib"] # Add later if needed for FFI

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
directories = "^5.0"
walkdir = "^2.4"
fs_extra = "^1.3"
regex = "^1.10"
cargo_toml = "^0.17"
clap = { version = "4.4", features = ["derive", "env"] }
tempfile = "3.8"